service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-netflix
  labels:
    run: my-netflix
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: my-netflix
